<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/drawer_menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_calendar"
            android:icon="?attr/themedMenuCalendarDrawable"
            android:title="@string/nav_calendar" />
        <item
            android:id="@+id/nav_exercises"
            android:icon="?attr/themedMenuExerciseDrawable"
            android:title="@string/nav_exercises" />
        <item
            android:id="@+id/nav_routines"
            android:icon="@drawable/ic_menu_routine_black"
            android:title="@string/nav_routines" />
        <item
            android:id="@+id/nav_graphs"
            android:icon="@drawable/ic_menu_bar_chart_black"
            android:title="@string/nav_graphs" />
    </group>

    <group
        android:id="@+id/drawer_menu_bottom"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_info_black"
            android:title="@string/nav_about" />
    </group>

</menu>
