<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/drawer_menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="?attr/themedMenuHomeDrawable"
            android:title="@string/nav_home"
            android:checked="true"/>
        <item
            android:id="@+id/nav_calendar"
            android:icon="?attr/themedMenuCalendarDrawable"
            android:title="@string/nav_calendar" />
        <item
            android:id="@+id/nav_exercises"
            android:icon="?attr/themedMenuExerciseDrawable"
            android:title="@string/nav_exercises" />
        <!--<item-->
            <!--android:id="@+id/nav_routines"-->
            <!--android:icon="?attr/themedMenuRoutineDrawable"-->
            <!--android:title="@string/nav_routines" />-->
        <item
            android:id="@+id/nav_graphs"
            android:icon="?attr/themedMenuGraphsDrawable"
            android:title="@string/nav_graphs" />
    </group>

    <group
        android:id="@+id/drawer_menu_bottom"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="?attr/themedMenuSettingsDrawable"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="?attr/themedMenuAboutDrawable"
            android:title="@string/nav_about" />
    </group>
    <group
        android:id="@+id/drawer_menu_debug"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_realm"
            android:icon="@drawable/error_circle"
            android:title="@string/nav_realm" />
    </group>

</menu>
