<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_settings"
        android:enabled="true"
        android:icon="?attr/themedMenuSettingsDrawable"
        android:title="@string/nav_settings"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_exercises"
        android:enabled="true"
        android:icon="?attr/themedMenuExerciseDrawable"
        android:title="@string/nav_exercises"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_graphs"
        android:enabled="true"
        android:icon="?attr/themedMenuGraphsDrawable"
        android:title="@string/nav_graphs"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_calendar"
        android:enabled="true"
        android:icon="?attr/themedMenuCalendarDrawable"
        android:title="@string/nav_calendar"
        app:showAsAction="always" />

    <item
        android:id="@+id/nav_today"
        android:enabled="true"
        android:icon="?attr/themedMenuHomeDrawable"
        android:title="@string/nav_today"
        app:showAsAction="always" />

</menu>
