<?xml version="1.0" encoding="utf-8"?>
<agency.tango.materialintroscreen.parallax.ParallaxLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/intro_padding_bottom">

    <ImageView
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_check_white_48dp"
        android:layout_height="@dimen/intro_icon_size"
        android:layout_width="@dimen/intro_icon_size"
        tools:layout_margin="@dimen/intro_margin"
        android:layout_marginTop="@dimen/intro_margin_top"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        style="@style/RobotoDisplay01"
        app:layout_parallaxFactor="0.2"
        android:text="@string/intro_slide_five_title"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginStart="@dimen/intro_margin_left"
        android:layout_marginEnd="@dimen/intro_margin_right"
        android:text="@string/intro_slide_five_description"
        app:layout_parallaxFactor="0.4"
        style="@style/RobotoCaption" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginStart="@dimen/intro_margin_left"
        android:layout_marginEnd="@dimen/intro_margin_right"
        android:layout_marginTop="@dimen/intro_margin_top"
        android:text="@string/intro_slide_five_description_two"
        app:layout_parallaxFactor="0.6"
        style="@style/RobotoCaption" />

</agency.tango.materialintroscreen.parallax.ParallaxLinearLayout>