<?xml version="1.0" encoding="utf-8"?>
<com.brandonhogan.liftscout.core.controls.BaseFrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:windowBackground">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/profileRow"
                android:clickable="true"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:background="?attr/selectableItemBackground"
                android:paddingStart="@dimen/settings_table_row_horizontal_padding"
                android:paddingEnd="@dimen/settings_table_row_horizontal_padding"
                android:minHeight="@dimen/settings_table_row_min_height">

                <TextView
                    android:text="@string/setting_profile"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:paddingTop="@dimen/settings_table_body_text_padding_top"
                    android:textColor="?attr/android:textColorPrimary"
                    style="@style/RobotoSubheading"/>

                <TextView
                    style="@style/RobotoBody01"
                    android:textColor="?android:textColorSecondary"
                    android:text="@string/setting_profile_description"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textSize="@dimen/material_text_size_small"
                    android:maxLines="4" />

            </LinearLayout>

            <View android:layout_width="match_parent"
                android:background="?attr/colorFill"
                android:layout_height="@dimen/settings_divider_view_hieght"/>


            <LinearLayout
                android:id="@+id/displayRow"
                android:clickable="true"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:background="?attr/selectableItemBackground"
                android:paddingStart="@dimen/settings_table_row_horizontal_padding"
                android:paddingEnd="@dimen/settings_table_row_horizontal_padding"
                android:minHeight="@dimen/settings_table_row_min_height">


                    <TextView
                        android:text="@string/setting_display"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:paddingTop="@dimen/settings_table_body_text_padding_top"
                        android:textColor="?attr/android:textColorPrimary"
                        style="@style/RobotoSubheading"/>

                    <TextView
                        style="@style/RobotoBody01"
                        android:textColor="?android:textColorSecondary"
                        android:text="@string/setting_display_description"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:textSize="@dimen/material_text_size_small"
                        android:maxLines="4" />


            </LinearLayout>

            <View android:layout_width="match_parent"
                android:background="?attr/colorFill"
                android:layout_height="@dimen/settings_divider_view_hieght"/>


            <LinearLayout
                android:id="@+id/todayRow"
                android:clickable="true"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:background="?attr/selectableItemBackground"
                android:paddingStart="@dimen/settings_table_row_horizontal_padding"
                android:paddingEnd="@dimen/settings_table_row_horizontal_padding"
                android:minHeight="@dimen/settings_table_row_min_height">


                <TextView
                    android:text="@string/setting_home"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:paddingTop="@dimen/settings_table_body_text_padding_top"
                    android:textColor="?attr/android:textColorPrimary"
                    style="@style/RobotoSubheading"/>

                <TextView
                    style="@style/RobotoBody01"
                    android:textColor="?android:textColorSecondary"
                    android:text="@string/setting_home_description"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textSize="@dimen/material_text_size_small"
                    android:maxLines="4" />


            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</com.brandonhogan.liftscout.core.controls.BaseFrameLayout>